--- a/pipelines/templatesandbindings/dev-ci-build-from-pr-template.yaml
+++ b/pipelines/templatesandbindings/dev-ci-build-from-pr-template.yaml
@@ -29,7 +29,7 @@ spec:
       type: image
       params:
         - name: url
-          value: REPLACE_IMAGE/taxi:$(params.gitref)-$(params.shortsha)
+          value: REPLACE_IMAGE:$(params.gitref)-$(params.shortsha)
   - apiVersion: tekton.dev/v1alpha1
     kind: PipelineRun
     metadata:
