Add an extra binding.

--- a/pipelines/templatesandbindings/dev-ci-build-from-pr-binding.yaml
+++ b/pipelines/templatesandbindings/dev-ci-build-from-pr-binding.yaml
@@ -12,3 +12,5 @@ spec:
     value: $(body.repository.clone_url)
   - name: shortsha
     value: $(body.intercepted.short_sha)
+  - name: fullname
+    value: $(body.intercepted.fullname)
