--- a/pipelines/argocd/argo-app.yaml
+++ b/pipelines/argocd/argo-app.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: taxi-demo
+  name: taxi-stage
 spec:
   project: default
   destination:
-    namespace: taxi
+    namespace: stage-environment
     server: https://kubernetes.default.svc
   source:
-    repoURL: https://github.com/GITHUB_REPO.git
+    repoURL: https://github.com/GITHUB_STAGE_REPO.git
     path: deploy
   syncPolicy:
     automated:
