Ensure that the values are pruned.

--- a/pipelines/argocd/argo-app.yaml
+++ b/pipelines/argocd/argo-app.yaml
@@ -12,5 +12,5 @@ spec:
     path: deploy
   syncPolicy:
     automated:
-      prune: false
-      selfHeal: false
+      prune: true
+      selfHeal: true
