--- a/pipelines/templatesandbindings/dev-cd-deploy-from-master-template.yaml
+++ b/pipelines/templatesandbindings/dev-cd-deploy-from-master-template.yaml
@@ -29,7 +29,7 @@ spec:
       type: image
       params:
         - name: url
-          value: quay.io/kmcdermo/taxi:$(params.shortsha)
+          value: REPLACE_IMAGE:$(params.shortsha)
   - apiVersion: tekton.dev/v1alpha1
     kind: PipelineRun
     metadata:
