Ensure that the deploy is run after the build and correct the k8s image.

--- a/pipelines/cd/dev-cd-pipeline.yaml
+++ b/pipelines/cd/dev-cd-pipeline.yaml
@@ -20,6 +20,8 @@ spec:
           - name: image
             resource: runtime-image
     - name: deploy-image
+      runAfter:
+        - build-image
       taskRef:
         name: deploy-using-kubectl
       resources:
