--- a/pipelines/cd/task-deploy-using-kubectl.yaml
+++ b/pipelines/cd/task-deploy-using-kubectl.yaml
@@ -37,7 +37,7 @@ spec:
         - "$(inputs.params.YAMLPATHTOIMAGE)"
         - "$(inputs.resources.image.url)"
     - name: run-kubectl
-      image: quay.io/bigkevmcd/k8s-kubectl:latest
+      image: quay.io/kmcdermo/k8s-kubectl:latest
       workingDir: /workspace/source
       command: ["kubectl"]
       args:
